--- a/Dataframes.ipynb
+++ b/Dataframes.ipynb
@@ -26,7 +26,7 @@
     "import java.time.format.DateTimeFormatter\n",
     "\n",
     "val spark = {\n",
-    "  NotebookSparkSession.builder()\n",
+    "  SparkSession.builder()\n",
     "    .master(\"local[1]\")\n",
     "    .getOrCreate()\n",
     "}\n",
