--- a/Reto01_Actividad_03.ipynb
+++ b/Reto01_Actividad_03.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "//Import para Jupyter-notebooks \n",
     "import $ivy.`org.apache.spark::spark-sql:2.4.4`\n",
-    "import $ivy.`sh.almond::almond-spark:0.6.0`\n",
     "import org.apache.log4j.{Level, Logger}\n",
     "Logger.getLogger(\"org\").setLevel(Level.OFF)"
    ]
@@ -32,7 +31,7 @@
     "import org.apache.spark.sql._\n",
     "\n",
     "val spark = {\n",
-    "  NotebookSparkSession.builder()\n",
+    "  SparkSession.builder()\n",
     "    .master(\"local[1]\")\n",
     "    .getOrCreate()\n",
     "}"
