Initial linux testing

--- a/unidad_1.ipynb
+++ b/unidad_1.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución creará el `directorio1` y el `directorio2` en la ruta `/home/alejo/`."
+    "La siguiente ejecución creará el `directorio1` y el `directorio2` en la ruta `/home/alejo/prueba`."
    ]
   },
   {
