--- a/unidad_1.ipynb
+++ b/unidad_1.ipynb
@@ -18,6 +18,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# El Comando pwd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`pwd` es un comando que permite identificar en que lugar del sistema te encuentras ubicado, es decir, en que carpeta estás actualmente.\n",
+    "  * Se ejecuta simplemente `pwd` para que te de una ruta de donde te encuentras por ejemplo `/home/${USUARIO}/directorio1/`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La siguiente ejecución te permitirá confirmar que estás en el directorio `/home/${USUARIO}/`, por favor ubicate sobre la proxima ejecución y presiona en el botón \"Run\" para validarlo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# El Comando mkdir"
    ]
   },
@@ -34,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución creará el `directorio1` y el `directorio2` en la ruta `/home/alejo/prueba`."
+    "La siguiente ejecución creará el `directorio1` y el `directorio2` en la ruta `/home/alejo/`."
    ]
   },
   {
@@ -237,37 +268,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# El Comando pwd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`pwd` es un comando que permite identificar en que lugar del sistema te encuentras ubicado, es decir, en que carpeta estás actualmente.\n",
-    "  * Se ejecuta simplemente `pwd` para que te de una ruta de donde te encuentras por ejemplo `/home/alejo/directorio1/`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "La siguiente ejecución te permitirá confirmar que estás en el directorio `/home/alejo/directorio1/`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# El Comando rm o el Comando rmdir"
    ]
   },
@@ -384,17 +384,23 @@
    ]
   }
  ],
- "metadata": {  
+ "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "shell",
-   "file_extension": ".sh",
-   "mimetype": "text/x-sh",
-   "name": "bash"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
