Initial linux testing

--- a/unidad_1.ipynb
+++ b/unidad_1.ipynb
@@ -25,8 +25,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pwd` es un comando que permite identificar en que lugar del sistema te encuentras ubicado, es decir, en que carpeta estás actualmente.\n",
-    "  * Se ejecuta simplemente `pwd` para que te de una ruta de donde te encuentras por ejemplo `/home/${USUARIO}/directorio1/`"
+    "`pwd` es un comando que permite identificar en que lugar del sistema te encuentras ubicado, es decir, en que carpeta estás actualmente\n",
+    "  * Se ejecuta simplemente `pwd` para que te imprima en pantalla una ruta de donde te encuentras por ejemplo `/home/${USUARIO}/directorio1/`"
    ]
   },
   {
@@ -49,6 +49,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Al ejecutarlo podrás ver en pantalla una salida \"Out\" que te mostrará en que directorio realizaremos nuestra ejecución, por ejemplo `/home/jovyan/`, desde este directorio comenzaremos nuestra práctica."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# El Comando mkdir"
    ]
   },
@@ -58,14 +65,15 @@
    "source": [
     "`mkdir` (abreviación de \"make directory\") es un comando que permite crear directorios en Linux\n",
     "  * Puedes crear directorios en la ruta actual con `mkdir directorioacrear` o en otras rutas `mkdir /ruta/al/directorio/directorioacrear`\n",
-    "  * Puedes añadir flags como `-p` para crear varios directorios al tiempo `mkdir -p directorio1 directorio2 directorio3`"
+    "  * Puedes añadir flags como `-p` para crear varios directorios al tiempo `mkdir -p directorio1 directorio2 directorio3`\n",
+    "  * Puedes anidar directorios utilizando corchetes `mkdir -p directorio1/{subdirectorio1,subdirectorio2}`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución creará el `directorio1` y el `directorio2` en la ruta `/home/alejo/`."
+    "La siguiente ejecución creará el directorio `directorio1` y el directorio `directorio2` en la ruta absoluta `/home/${USUARIO}/` (reemplaza ${USUARIO}, por el nombre del directorio de usuario que viste en la ejecución anterior para que quede algo como `/home/jovyan/)`."
    ]
   },
   {
@@ -74,7 +82,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mkdir -p /home/alejo/directorio1 /home/alejo/directorio2"
+    "mkdir -p /home/${USUARIO}/directorio1 /home/${USUARIO}/directorio2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La siguiente ejecución creará el directorio `documentos` y dentro de él los subdirectorios `universidad`, `trabajo` y `personales`, además dentro del directorio `universidad` crearemos los directorios `SEM1` y `SEM2`. Esta vez asumiremos que estamos en la ruta /home/${USUARIO}/ por lo que utilizaremos una ruta relativa y no una ruta absoluta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mkdir -p documentos/{trabajo,personales,universidad/{SEM1,SEM2}}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# El Comando ls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`ls` (abreviación de \"list\") es un comando que sirve para listar los archivos o directorios de un directorio\n",
+    "  * Puedes añadir flags como \"-la\" para ver más información de los archvios por ejemplo `ls -la directorio`.\n",
+    "  * Puedes añadir rutas como por ejemplo `ls /directorio/subdirectorio` para ver el contenido de otro directorio diferente al que estás usando actualmente"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La siguiente ejecución listara el contenido del directorio actual en el que estás ubicado `/home/${USUARIO}/` por lo que se deberán ver los directorios `directorio1`, `directorio2` y `documentos` creados en la anterior ejecución."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 16\r\n",
+      "drwxr-xr-x  2 alejo users  4096 jul 31 22:45 \u001b[0m\u001b[01;34m.\u001b[0m/\r\n",
+      "drwx------ 93 alejo users 12288 jul 31 22:45 \u001b[01;34m..\u001b[0m/\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora, en esta ejecución deberás listar el contenido del directorio documentos `/home/${USUARIO}/documentos` pero utilizando una ruta absoluta y un flag para ver más información como permisos y propietarios `-la` allí se deberán ver los directorios `trabajo`, `personales` y `universidad` creados en la anterior ejecución. (reemplaza ${USUARIO}, por el nombre del directorio de usuario que hemos estado utilizando en anteriores ejecuciones para que quede algo como `/home/jovyan/)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 16\r\n",
+      "drwxr-xr-x  2 alejo users  4096 jul 31 22:45 \u001b[0m\u001b[01;34m.\u001b[0m/\r\n",
+      "drwx------ 93 alejo users 12288 jul 31 22:45 \u001b[01;34m..\u001b[0m/\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls -la /home/${USUARIO}/documentos/"
    ]
   },
   {
@@ -119,48 +211,6 @@
    ],
    "source": [
     "touch /home/alejo/directorio1/prueba1.txt /home/alejo/directorio2/prueba2.txt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# El Comando ls"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`ls` (abreviación de \"list\") es un comando que sirve para listar los archivos en un directorio\n",
-    "  * Puedes añadir flags como \"-la\" para ver más información de los archvios por ejemplo `ls -la directorio`.\n",
-    "  * Puedes añadir rutas como por ejemplo `ls /directorio/subdirectorio` para ver el contenido de otro directorio"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "La siguiente ejecución listara el contenido del directorio `directorio1` en la ruta `/home/alejo/` donde deberá estar el archivo `prueba1.txt` creado en la anterior ejecución."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 16\r\n",
-      "drwxr-xr-x  2 alejo users  4096 jul 31 22:45 \u001b[0m\u001b[01;34m.\u001b[0m/\r\n",
-      "drwx------ 93 alejo users 12288 jul 31 22:45 \u001b[01;34m..\u001b[0m/\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls -la /home/alejo/directorio1/"
    ]
   },
   {
