Initial linux testing

--- a/unidad_1.ipynb
+++ b/unidad_1.ipynb
@@ -282,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución movera el directorio `documentos` y todos sus subdirectorios a un nuevo directorio llamado `directorios importantes` (ten en cuenta el caracter backslash \\ para definir un espacio)."
+    "La siguiente ejecución movera el directorio `documentos` y todos sus subdirectorios a un nuevo directorio llamado `directorios-importantes`."
    ]
   },
   {
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mv /home/${USER}/documentos /home/${USER}/directorios\\ importantes"
+    "mv /home/${USER}/documentos /home/${USER}/directorios-importantes"
    ]
   },
   {
@@ -372,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución copia el directorio `directorios importantes` y todos sus subdirectorios a un nuevo directorio llamado `informacion personal`(ten en cuenta el caracter backslash \\ para definir un espacio)."
+    "La siguiente ejecución copia el directorio `directorios-importantes` y todos sus subdirectorios a un nuevo directorio llamado `informacion-personal`."
    ]
   },
   {
@@ -381,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cp /home/${USER}/directorios\\ importantes /home/${USER}/informacion\\ personal"
+    "cp /home/${USER}/directorios-importantes /home/${USER}/informacion-personal"
    ]
   },
   {
