Initial linux testing

--- a/unidad_1.ipynb
+++ b/unidad_1.ipynb
@@ -440,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora la siguiente ejecución te permitirá moverte al directorio `/home/${USER}/directorio1/`"
+    "Ahora la siguiente ejecución te permitirá moverte al directorio `/home/${USER}/directorio1/` (reemplaza `${USER}` por el nombre del usuario del directorio)"
    ]
   },
   {
@@ -589,16 +589,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución te permitirá descargar con curl un archivo de mp3 de ejemplo de un sitio web, y guardarlo en la ruta `/home/${USER}/directorio1/` con el nombre `archivodeaudio.mp3`"
+    "La siguiente ejecución te permitiría descargar con curl un archivo de mp3 de ejemplo de un sitio web, y guardarlo en la ruta `/home/${USER}/directorio1/` con el nombre `archivodeaudio.mp3`.\n",
+    "\n",
+    "`wget https://file-examples.com/wp-content/uploads/2017/11/file_example_MP3_700KB.mp3 -O /home/${USER}/directorio1/archivodeaudio.mp3`\n",
+    "\n",
+    "Sin embargo debido a las limitaciones de Jupyter para ejecutar ciertos comandos crearemos este archivos de ejemplo utilizando el siguiente comando."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-e571c14055af>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-e571c14055af>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    wget https://file-examples.com/wp-content/uploads/2017/11/file_example_MP3_700KB.mp3 -O /home/${USER}/directorio1/archivodeaudio.mp3\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "wget https://file-examples.com/wp-content/uploads/2017/11/file_example_MP3_700KB.mp3 -O /home/${USER}/directorio1/archivodeaudio.mp3"
+    "ls > /home/${USER}/directorio1/archivodeaudio.mp3"
    ]
   },
   {
@@ -624,7 +637,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución te permitirá crear un enlace simbólico del archivo de audio `archivodeaudio` ubicado en `/home/${USER}/directorio1/` en el directorio `/home/${USER}/`"
+    "La siguiente ejecución te permitiría crear un enlace simbólico del archivo de audio `archivodeaudio` ubicado en `/home/${USER}/directorio1/` en el directorio `/home/${USER}/`\n",
+    "\n",
+    "`ln /home/${USER}/directorio1/archivodeaudio.mp3 /home/${USER}/archivodeaudio.mp3`\n",
+    "\n",
+    "Sin embargo debido a las limitaciones de Jupyter para ejecutar ciertos comandos crearemos este archivos de ejemplo utilizando el siguiente comando."
    ]
   },
   {
@@ -633,7 +650,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln /home/${USER}/directorio1/archivodeaudio.mp3 /home/${USER}/archivodeaudio.mp3"
+    "ls > /home/${USER}/archivodeaudio.mp3"
    ]
   },
   {
@@ -673,15 +690,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución te permitirá buscar todos los archivos `.mp3` del directorio `/home/${USER}/`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "La siguiente ejecución te permitiría buscar todos los archivos `.mp3` del directorio `/home/${USER}/`\n",
+    "\n",
     "find /home/${USER}/ --iname \"*.mp3\""
    ]
   },
@@ -689,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Deberías poder ver la ubicación de `archivodeaudio.mp3`"
+    "Con esta deberías poder ver la ubicación de `archivodeaudio.mp3`"
    ]
   },
   {
