Setting commands compatibles with bash kernel

--- a/unidad_1.ipynb
+++ b/unidad_1.ipynb
@@ -169,31 +169,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para crear el archivo `archivo1.txt` en el `directorio1` y el archivo `archivo2.txt` en el `directorio2` creados en la ruta `/home/${USER}/`, usaríamos:\n",
-    "\n",
-    "`touch /home/${USER}/directorio1/archivo1.txt /home/${USER}/directorio2/archivo2.txt`\n",
-    "o\n",
-    "`touch directorio1/archivo1.txt directorio2/archivo2.txt`\n",
-    "\n",
-    "Sin embargo debido a las limitaciones de Jupyter para ejecutar ciertos comandos crearemos esos archivos de ejemplo utilizando el siguiente comando."
+    "La siguiente ejecución creara `archivo1.txt` en el `directorio1` y el archivo `archivo2.txt` en el `directorio2` en la ruta `/home/${USER}/`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls > /home/${USER}/directorio1/archivo1.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ls > /home/${USER}/directorio2/archivo2.txt"
+    "touch /home/${USER}/directorio1/archivo1.txt /home/${USER}/directorio2/archivo2.txt"
    ]
   },
   {
@@ -589,29 +574,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución te permitiría descargar con curl un archivo de mp3 de ejemplo de un sitio web, y guardarlo en la ruta `/home/${USER}/directorio1/` con el nombre `archivodeaudio.mp3`.\n",
-    "\n",
-    "`wget https://file-examples.com/wp-content/uploads/2017/11/file_example_MP3_700KB.mp3 -O /home/${USER}/directorio1/archivodeaudio.mp3`\n",
-    "\n",
-    "Sin embargo debido a las limitaciones de Jupyter para ejecutar ciertos comandos crearemos este archivos de ejemplo utilizando el siguiente comando."
+    "La siguiente ejecución te permitirá descargar con curl un archivo de mp3 de ejemplo de un sitio web, y guardarlo en la ruta `/home/${USER}/directorio1/` con el nombre `archivodeaudio.mp3`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-e571c14055af>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-e571c14055af>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    wget https://file-examples.com/wp-content/uploads/2017/11/file_example_MP3_700KB.mp3 -O /home/${USER}/directorio1/archivodeaudio.mp3\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ls > /home/${USER}/directorio1/archivodeaudio.mp3"
+    "`wget https://file-examples.com/wp-content/uploads/2017/11/file_example_MP3_700KB.mp3 -O /home/${USER}/directorio1/archivodeaudio.mp3`"
    ]
   },
   {
@@ -637,11 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución te permitiría crear un enlace simbólico del archivo de audio `archivodeaudio` ubicado en `/home/${USER}/directorio1/` en el directorio `/home/${USER}/`\n",
-    "\n",
-    "`ln /home/${USER}/directorio1/archivodeaudio.mp3 /home/${USER}/archivodeaudio.mp3`\n",
-    "\n",
-    "Sin embargo debido a las limitaciones de Jupyter para ejecutar ciertos comandos crearemos este archivos de ejemplo utilizando el siguiente comando."
+    "La siguiente ejecución te permitirá crear un enlace simbólico del archivo de audio `archivodeaudio` ubicado en `/home/${USER}/directorio1/` en el directorio `/home/${USER}/`."
    ]
   },
   {
@@ -650,7 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls > /home/${USER}/archivodeaudio.mp3"
+    "ln /home/${USER}/directorio1/archivodeaudio.mp3 /home/${USER}/archivodeaudio.mp3"
    ]
   },
   {
@@ -971,7 +939,7 @@
    ]
   }
  ],
- "metadata": {  
+ "metadata": {
   "kernelspec": {
    "display_name": "Bash",
    "language": "bash",
