Setting commands compatibles with bash kernel

--- a/unidad_1.ipynb
+++ b/unidad_1.ipynb
@@ -357,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución copia el directorio `directorios-importantes` y todos sus subdirectorios a un nuevo directorio llamado `informacion-personal`."
+    "La siguiente ejecución copia el directorio `directorios-importantes` y todos sus subdirectorios de manera recursiva `-R` a un nuevo directorio llamado `informacion-personal`."
    ]
   },
   {
@@ -366,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cp /home/${USER}/directorios-importantes /home/${USER}/informacion-personal"
+    "cp -R /home/${USER}/directorios-importantes /home/${USER}/informacion-personal"
    ]
   },
   {
