--- a/unidad_1.ipynb
+++ b/unidad_1.ipynb
@@ -583,7 +583,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "`wget https://file-examples.com/wp-content/uploads/2017/11/file_example_MP3_700KB.mp3 -O /home/${USER}/directorio1/archivodeaudio.mp3`"
+    "wget https://file-examples.com/wp-content/uploads/2017/11/file_example_MP3_700KB.mp3 -O /home/${USER}/directorio1/archivodeaudio.mp3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Puedes validar que el archivo fue creado con el comando `ls`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls /home/${USER}/directorio1/"
    ]
   },
   {
@@ -935,7 +951,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls -la /home/${USER}/directorio1 & ls -la /home/${USER}/directorio2"
+    "ls -la /home/${USER}/directorio1 & ls -la /home/${USER}/"
    ]
   }
  ],
