Adding unit 2 and fixing errors on unit one

--- a/unidad_1.ipynb
+++ b/unidad_1.ipynb
@@ -674,8 +674,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente ejecución te permitiría buscar todos los archivos `.mp3` del directorio `/home/${USER}/`\n",
-    "\n",
+    "La siguiente ejecución te permitira buscar todos los archivos `.mp3` del directorio `/home/${USER}/`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "find /home/${USER}/ --iname \"*.mp3\""
    ]
   },
@@ -838,7 +845,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date >> /home/${USER}/archivodeprueba.txt"
+    "date --date=\"1 month ago\" >> /home/${USER}/archivodeprueba.txt"
    ]
   },
   {
